--- a/lib/style/Node.less
+++ b/lib/style/Node.less
@@ -16,10 +16,6 @@
         border: 2px dashed transparent;
         min-width: 130px;
         z-index: 10;
-        &:hover {
-          // background: red;
-        }
-  
         .error {
           font-size: 14px;
           color: red;
@@ -27,6 +23,27 @@
           top: -20px;
         }
       }
+      .default-node-render {
+        min-width: 140px;
+        border-radius: 3px;
+        border: 1px solid #4C77BF;
+        display: flex;
+        flex-direction: column;
+        transition: 0.3s;
+        
+        .id {
+          padding: 5px;
+          background: #4C77BF;
+          color: white;
+        }
+        .name {
+          padding: 5px;
+          background: white;
+        }
+      }
+
+
+
   
       .dragging {
         background: yellow;
